--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -13,16 +13,18 @@
   
   <style>
        #selector { margin-left:auto; margin-right:auto; text-align:center; }
-       .button { padding:10px; display:inline-block; text-align:center; width:200px; background-color:#fff; font-weight:900; font-family:"Benton Sans",Helvetica,Arial,sans-serif; border:1px solid black; }
+       .button { padding:10px; display:inline-block; text-align:center; width:100%; background-color:#fff; font-weight:900; font-family:"Benton Sans",Helvetica,Arial,sans-serif; border:1px solid black; }
        .button:hover, .selected { background-color:#333 !important; color:#fff !important; cursor:pointer;  }
        .button { float:left; }
        .stat { float:right; }
        .filterBreak { height:2px; border-top:1px solid #ddd; clear:both; }
 
-       .icon { text-align:center; }
+       .icon { text-align:left; }
        .icon img { width:100px; }
+       .bigicon { text-align:center; }
+       .bigicon img { width:100px; }
 
-       .year { font-size:1.5em; font-family:"Popular"; padding:25px; border-left:3px solid #7F587C; margin:15px; }
+       .year { font-size:1em; font-family:"Popular"; padding:25px; border-left:3px solid #7F587C; margin:15px; }
        .year div { margin:15px; }
 
        .art img { width:300px; }
@@ -30,31 +32,43 @@
        .item.icon { text-align:left !important; }
 
        .item { border-bottom:1px solid #ddd; }
+        
+       #wrapper { width:100%; } 
+       .leftSide { float:left; width:30%; position:fixed; }
+       .rightSide { float:right; width:67%; }
 
        .title { font-weight:900; font-size:1em !important; font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
        .description { font-family:"Benton Sans",Helvetica,Arial,sans-serif; font-size:1em !important; }
 
-       #filter { text-align:center; margin:15px; clear:both; margin-top:10px; display:block; padding:20px; }
+        #filter { font-family:"Benton Sans"; font-size:.9em; margin:5px; }
+        #filter input { width: 100% !important; padding: 0 10px 0 10px; font-family:"Benton Sans"; border-radius:5px !important; margin:0; width:100%; height:30px; line-height:120%; font-size: 1em; -webkit-appearance: none;
+          -webkit-border-radius:0; border-radius:0; box-shadow: inset 0 1px 2px rgba(0,0,0,0.1); color: rgba(0,0,0,0.75);  -webkit-transition: all 0.30s ease-in-out; -moz-transition: all 0.30s ease-in-out; -ms-transition: all 0.30s ease-in-out; -o-transition: all 0.30s ease-in-out; background-color: #fff !important; font-family: inherit; border: 1px solid #eee !important; 
+          background-size: 14px 14px;
+          background-repeat: no-repeat; 
+          background-position: 98% 50%; }
+        #filter input:focus { width: 100% !important; font-family:"Benton Sans"; box-shadow: 0 0 5px #999; padding: 1px 10px 1px 10px; border: 1px solid #61bd1a; }
 
-       .wrapper-dropdown-1 { display:inline-block;font-family:"Benton Sans",Helvetica,Arial,sans-serif;z-index:900;background:#ddd;color:#333;cursor:pointer;font-weight:bold;outline:none;padding:8px;position:relative;width:200px;border:1px solid #aaa;box-shadow:0 2px 1px rgba(0, 0, 0, 0.10);font-size:14px; width:300px; }
-      .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
-      ul.dropdown.months { box-sizing:border-box;margin:0;moz-box-sizing:border-box;padding:0;webkit-box-sizing:border-box;margin-top:-1px;border-radius:0 0 4px 4px;background-clip:padding-box; }
-      .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
-      .wrapper-dropdown-1 .dropdown li:hover a { background:#EFEFEF; }
-      header[role="banner"] { width:100%;height:40px;z-index:1000;background:#f0f0f0; }
+        .wrapper-dropdown-1 { display:inline-block;font-family:"Benton Sans",Helvetica,Arial,sans-serif;z-index:900;background:#ddd;color:#333;cursor:pointer;font-weight:bold;outline:none;padding:8px;position:relative;width:200px;border:1px solid #aaa;box-shadow:0 2px 1px rgba(0, 0, 0, 0.10);font-size:14px; width:300px; }
+        .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
+        ul.dropdown.months { box-sizing:border-box;margin:0;moz-box-sizing:border-box;padding:0;webkit-box-sizing:border-box;margin-top:-1px;border-radius:0 0 4px 4px;background-clip:padding-box; }
+        .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
+        .wrapper-dropdown-1 .dropdown li:hover a { background:#EFEFEF; }
+        header[role="banner"] { width:100%;height:40px;z-index:1000;background:#f0f0f0; }
 
 
-      @media (max-width:500px) {
-        #filter { text-align:center; margin:0; clear:both; display:block; padding:0; padding-top:15px; width:100%; }
-        .button, .stat { width:100%; float:none; clear:both; }
-      }
+        @media (max-width:500px) {
+          #filter { text-align:center; margin:0; clear:both; display:block; padding:0; padding-top:15px; width:100%; }
+          .button, .stat { width:100%; float:none; clear:both; }
+          .leftSide, .rightSide { width:100%; float:none; position:static; }
+        }
   </style> 
 </head>
 
 <body>
   <div id="wrapper">
 
- <div class="icon"><img src="./img/prince_logo.png" /></div>
+<div class="leftSide">
+ <div class="bigicon"><img src="./img/prince_logo.png" /></div>
  <div id="selector">
   <section class="main">
         <div class="wrapper-demo">
@@ -131,14 +145,15 @@
    <div class="stat"></div>
    <div class="filterBreak"></div>
 
-   <div class="switch button" data="other">Other Milestones</div>
+   <div class="switch button" data="other">Other Events</div>
    <div class="stat"></div>
 </div>
 
 <div id="filter"><input type="search" id="filter_box" placeholder="Search by keyword"></input></div>
+</div>
 
-
-<div class="resukts" style="display:none;"></div>
+<div class="rightSide">
+<div class="results" style="display:none;"></div>
 
 <!-- <div id="timeline"> -->
 <div id="y1958" class="year"></div>
@@ -180,6 +195,7 @@
 <div id="y2014" class="year"></div>
 <div id="y2015" class="year"></div>
 <div id="y2016" class="year"></div>
+</div>
 </div>
 <!--   </div> -->
 </body>
@@ -254,10 +270,10 @@ function spitFirstItems(year){
       return  "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Grammy Award</div>" ;
     }
     if (d.type == "tour"){
-      return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Total Tickets Sold: " + d.TicketsSold + "</div><div class='rank'>Average Tickets Sold: " + d.AvgTicketsSold + "</div><div class='rank'>Gross: $" + d.gross_millions + " million</div>";
+      return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Total Tickets Sold: " + d3.format(",")(d.TicketsSold) + "</div><div class='rank'>Average Tickets Sold: " + d3.format(",")(d.AvgTicketsSold) + "</div><div class='rank'>Gross: $" + d.gross_millions + " million</div>";
     }
     if (d.type == "tickets"){
-      return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Total Tickets Sold: " + d.TicketsSold + "</div><div class='rank'>Average Tickets Sold: " + d.AvgTicketsSold + "</div><div class='rank'>Gross: $" + d.gross_millions + " million</div>"
+      return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Total Tickets Sold: " + d.TicketsSold + "</div><div class='rank'>Average Tickets Sold: " + d3.format(",")(d.AvgTicketsSold) + "</div><div class='rank'>Gross: $" + d.gross_millions + " million</div>"
     }
  });
 }
