--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -27,6 +27,13 @@
        .year { font-size:1em; font-family:"Popular"; padding:25px; border-left:3px solid #7F587C; margin:15px; }
        .year div { margin:15px; }
 
+       .gold { color:#AAAA39; font-weight:900; }
+       .diamond { color:#CBCBB3; font-weight:900; } 
+       .platinum { color:#989886; font-weight:900; }
+
+       .scrollToTop { color:#aaa !important; text-align:center; padding:15px; }
+       .scrollToTop:hover { color:#333 !important; cursor:pointer; }
+
        .art img { width:300px; }
        .item.icon img { width:150px !important;  text-align:left !important; }
        .item.icon { text-align:left !important; }
@@ -35,7 +42,7 @@
         
        #wrapper { width:100%; } 
        .leftSide { float:left; width:30%; position:fixed; }
-       .rightSide { float:right; width:67%; }
+       .rightSide { float:right; width:67%; height:750px; overflow-x:hidden; overflow-y:auto; }
 
        .title { font-weight:900; font-size:1em !important; font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
        .description { font-family:"Benton Sans",Helvetica,Arial,sans-serif; font-size:1em !important; }
@@ -150,6 +157,8 @@
 </div>
 
 <div id="filter"><input type="search" id="filter_box" placeholder="Search by keyword"></input></div>
+
+<div class="scrollToTop">Return to Top</div>
 </div>
 
 <div class="rightSide">
@@ -216,6 +225,11 @@ d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7
 
 var data = dataLoad.stats;
 
+$('.scrollToTop').click(function(){
+    $('.rightSide').animate({scrollTop : 0},800);
+    return false;
+  });
+
 $(".button").click(function() {
   $(".switch, .button").removeClass("selected");
   $(this).addClass("selected");
@@ -261,10 +275,10 @@ function spitFirstItems(year){
       return "<div class='title'>" + d.title + "</div><div class='description'>" + d.notes + "</div>" ;
     }
     if (d.type == "album"){
-      return "<div class='art'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>" + d.rank + "</div><div class='label'>" + d.label + "<div class='description'>" + d.strib_copy + "</div>Score: " + d.strib_score + "</div>" ;
+      return "<div class='art'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Certified : " + d.rank + "</div><div class='label'>" + d.label + "<div class='description'>" + d.strib_copy + "</div>Score: " + d.strib_score + "</div>" ;
     }
     if (d.type == "billboard"){
-      return "<div class='title'>" + d.title + "</div><div class='rank'>Billboard Rank: " + d.rank + "</div>" ;
+      return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Billboard Rank: " + d.rank + "</div>" ;
     }
     if (d.type == "grammy"){
       return  "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Grammy Award</div>" ;
