--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="../_common_resources/styles/startribune_dataviz_styles.css" />
   
   <style>
+       body { font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
        #selector { margin-left:auto; margin-right:auto; text-align:center; }
        .button { padding:10px; display:inline-block; text-align:center; width:100%; background-color:#fff; font-weight:900; font-family:"Benton Sans",Helvetica,Arial,sans-serif; border:1px solid black; }
        .button:hover, .selected { background-color:#333 !important; color:#fff !important; cursor:pointer;  }
@@ -24,12 +25,16 @@
        .bigicon { text-align:center; }
        .bigicon img { width:100px; }
 
-       .year { font-size:1em; font-family:"Popular"; padding:25px; border-left:3px solid #7F587C; margin:15px; }
+       .year { font-size:1em; font-family:"Benton Sans",Helvetica,Arial,sans-serif; border-left:3px solid #7F587C; margin:15px; }
        .year div { margin:15px; }
 
        .gold { color:#AAAA39; font-weight:900; }
        .diamond { color:#CBCBB3; font-weight:900; } 
        .platinum { color:#989886; font-weight:900; }
+       .yearLabel { font-size:2em; font-family:"Popular"; }
+
+       .left { width:49%; float:left; padding:-2px; }
+       .right { width:49%; float:right; padding:-2px; }
 
        .scrollToTop { color:#aaa !important; text-align:center; padding:15px; }
        .scrollToTop:hover { color:#333 !important; cursor:pointer; }
@@ -55,13 +60,19 @@
           background-position: 98% 50%; }
         #filter input:focus { width: 100% !important; font-family:"Benton Sans"; box-shadow: 0 0 5px #999; padding: 1px 10px 1px 10px; border: 1px solid #61bd1a; }
 
-        .wrapper-dropdown-1 { display:inline-block;font-family:"Benton Sans",Helvetica,Arial,sans-serif;z-index:900;background:#ddd;color:#333;cursor:pointer;font-weight:bold;outline:none;padding:8px;position:relative;width:200px;border:1px solid #aaa;box-shadow:0 2px 1px rgba(0, 0, 0, 0.10);font-size:14px; width:300px; }
+        .wrapper-demo { width:100%; }
+        .wrapper-dropdown-1 { display:inline-block;font-family:"Benton Sans",Helvetica,Arial,sans-serif;z-index:900;background:#ddd;color:#333;cursor:pointer;font-weight:bold;outline:none;padding:8px;position:relative;width:200px;border:1px solid #aaa;box-shadow:0 2px 1px rgba(0, 0, 0, 0.10);font-size:14px; width:100%; }
         .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
         ul.dropdown.months { box-sizing:border-box;margin:0;moz-box-sizing:border-box;padding:0;webkit-box-sizing:border-box;margin-top:-1px;border-radius:0 0 4px 4px;background-clip:padding-box; }
         .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
         .wrapper-dropdown-1 .dropdown li:hover a { background:#EFEFEF; }
         header[role="banner"] { width:100%;height:40px;z-index:1000;background:#f0f0f0; }
 
+
+        .video-container { position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden; }
+        .video-container iframe,
+        .video-container object,
+        .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
         @media (max-width:500px) {
           #filter { text-align:center; margin:0; clear:both; display:block; padding:0; padding-top:15px; width:100%; }
@@ -82,69 +93,73 @@
           <div id="dd" class="wrapper-dropdown-1" tabindex="1">
             <span>Prince Rogers Nelson (1958-2016)</span>
             <ul class="dropdown months" tabindex="1">
-        <li class="switch"><a href="#" data="all">Prince Rogers Nelson (1958-2016)</a></li>
-        <li class="switch"><a href="#" data="1958">1958</a></li>
-        <li class="switch"><a href="#" data="1975">1975</a></li>
-        <li class="switch"><a href="#" data="1978">1978</a></li>
-        <li class="switch"><a href="#" data="1979">1979</a></li>
-        <li class="switch"><a href="#" data="1980">1980</a></li>
-        <li class="switch"><a href="#" data="1981">1981</a></li>
-        <li class="switch"><a href="#" data="1982">1982</a></li>
-        <li class="switch"><a href="#" data="1983">1983</a></li>
-        <li class="switch"><a href="#" data="1984">1984</a></li>
-        <li class="switch"><a href="#" data="1985">1985</a></li>
-        <li class="switch"><a href="#" data="1986">1986</a></li>
-        <li class="switch"><a href="#" data="1987">1987</a></li>
-        <li class="switch"><a href="#" data="1988">1988</a></li>
-        <li class="switch"><a href="#" data="1989">1989</a></li>
-        <li class="switch"><a href="#" data="1990">1990</a></li>
-        <li class="switch"><a href="#" data="1991">1991</a></li>
-        <li class="switch"><a href="#" data="1992">1992</a></li>
-        <li class="switch"><a href="#" data="1993">1993</a></li>
-        <li class="switch"><a href="#" data="1994">1994</a></li>
-        <li class="switch"><a href="#" data="1995">1995</a></li>
-        <li class="switch"><a href="#" data="1996">1996</a></li>
-        <li class="switch"><a href="#" data="1997">1997</a></li>
-        <li class="switch"><a href="#" data="1998">1998</a></li>
-        <li class="switch"><a href="#" data="1999">1999</a></li>
-        <li class="switch"><a href="#" data="2000">2000</a></li>
-        <li class="switch"><a href="#" data="2001">2001</a></li>
-        <li class="switch"><a href="#" data="2002">2002</a></li>
-        <li class="switch"><a href="#" data="2003">2003</a></li>
-        <li class="switch"><a href="#" data="2004">2004</a></li>
-        <li class="switch"><a href="#" data="2005">2005</a></li>
-        <li class="switch"><a href="#" data="2006">2006</a></li>
-        <li class="switch"><a href="#" data="2007">2007</a></li>
-        <li class="switch"><a href="#" data="2008">2008</a></li>
-        <li class="switch"><a href="#" data="2009">2009</a></li>
-        <li class="switch"><a href="#" data="2010">2010</a></li>
-        <li class="switch"><a href="#" data="2011">2011</a></li>
-        <li class="switch"><a href="#" data="2012">2012</a></li>
-        <li class="switch"><a href="#" data="2013">2013</a></li>
-        <li class="switch"><a href="#" data="2014">2014</a></li>
-        <li class="switch"><a href="#" data="2015">2015</a></li>
-        <li class="switch"><a href="#" data="2016">2016</a></li>
+        <li class="switch left"><a href="#" data="1958">1958</a></li>
+        <li class="switch left"><a href="#" data="1975">1975</a></li>
+        <li class="switch left"><a href="#" data="1978">1978</a></li>
+        <li class="switch left"><a href="#" data="1979">1979</a></li>
+        <li class="switch left"><a href="#" data="1980">1980</a></li>
+        <li class="switch left"><a href="#" data="1981">1981</a></li>
+        <li class="switch left"><a href="#" data="1982">1982</a></li>
+        <li class="switch left"><a href="#" data="1983">1983</a></li>
+        <li class="switch left"><a href="#" data="1984">1984</a></li>
+        <li class="switch left"><a href="#" data="1985">1985</a></li>
+        <li class="switch left"><a href="#" data="1986">1986</a></li>
+        <li class="switch left"><a href="#" data="1987">1987</a></li>
+        <li class="switch left"><a href="#" data="1988">1988</a></li>
+        <li class="switch left"><a href="#" data="1989">1989</a></li>
+        <li class="switch left"><a href="#" data="1990">1990</a></li>
+        <li class="switch left"><a href="#" data="1991">1991</a></li>
+        <li class="switch left"><a href="#" data="1992">1992</a></li>
+        <li class="switch right"><a href="#" data="1993">1993</a></li>
+        <li class="switch right"><a href="#" data="1994">1994</a></li>
+        <li class="switch right"><a href="#" data="1995">1995</a></li>
+        <li class="switch right"><a href="#" data="1996">1996</a></li>
+        <li class="switch right"><a href="#" data="1997">1997</a></li>
+        <li class="switch right"><a href="#" data="1998">1998</a></li>
+        <li class="switch right"><a href="#" data="1999">1999</a></li>
+        <li class="switch right"><a href="#" data="2000">2000</a></li>
+        <li class="switch right"><a href="#" data="2001">2001</a></li>
+        <li class="switch right"><a href="#" data="2002">2002</a></li>
+        <li class="switch right"><a href="#" data="2003">2003</a></li>
+        <li class="switch right"><a href="#" data="2004">2004</a></li>
+        <li class="switch right"><a href="#" data="2005">2005</a></li>
+        <li class="switch right"><a href="#" data="2006">2006</a></li>
+        <li class="switch right"><a href="#" data="2007">2007</a></li>
+        <li class="switch right"><a href="#" data="2008">2008</a></li>
+        <li class="switch right"><a href="#" data="2009">2009</a></li>
+        <li class="switch right"><a href="#" data="2010">2010</a></li>
+        <li class="switch right"><a href="#" data="2011">2011</a></li>
+        <li class="switch right"><a href="#" data="2012">2012</a></li>
+        <li class="switch right"><a href="#" data="2013">2013</a></li>
+        <li class="switch right"><a href="#" data="2014">2014</a></li>
+        <li class="switch right"><a href="#" data="2015">2015</a></li>
+        <li class="switch right"><a href="#" data="2016">2016</a></li>
           </ul>
           </div>
         ​</div>
 </section>
 </div>
 
+  <div class="filterBreak"></div>
+
 <div id="filterBox">
-
-   <div class="switch button" data="album">Albums</div>
+   <div class="switch button" data="all">All</div>
    <div class="stat"></div>
    <div class="filterBreak"></div>
 
-   <div class="switch button" data="grammy">Grammy Awards</div>
+   <div class="switch button" data="album">Albums (51)</div>
    <div class="stat"></div>
    <div class="filterBreak"></div>
 
-   <div class="switch button" data="tour">Tours</div>
+   <div class="switch button" data="grammy">Grammy Awards (7)</div>
    <div class="stat"></div>
    <div class="filterBreak"></div>
 
-   <div class="switch button" data="billboard">Billboard Rankings</div>
+   <div class="switch button" data="tour">Tours (25)</div>
+   <div class="stat"></div>
+   <div class="filterBreak"></div>
+
+   <div class="switch button" data="billboard">Billboard Rankings (40)</div>
    <div class="stat"></div>
    <div class="filterBreak"></div>
 
@@ -275,10 +290,10 @@ function spitFirstItems(year){
       return "<div class='title'>" + d.title + "</div><div class='description'>" + d.notes + "</div>" ;
     }
     if (d.type == "album"){
-      return "<div class='art'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Certified : " + d.rank + "</div><div class='label'>" + d.label + "<div class='description'>" + d.strib_copy + "</div>Score: " + d.strib_score + "</div>" ;
+      return "<div class='art'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Certified : " + d.rank + "</div><div class='label'>Label: " + d.label + "<div class='description'>" + d.strib_copy + "</div>Score: " + d.strib_score + "</div>" ;
     }
     if (d.type == "billboard"){
-      return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Billboard Rank: " + d.rank + "</div>" ;
+      return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Billboard Rank: #" + d.rank + "</div>" ;
     }
     if (d.type == "grammy"){
       return  "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Grammy Award</div>" ;
