--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -86,7 +86,7 @@
   <div id="wrapper">
 
 <div class="leftSide">
- <div class="bigicon"><img src="./img/prince_logo.png" /></div>
+ <div class="bigicon"><img src="./img/prince-icon.png" /></div>
  <div id="selector">
   <section class="main">
         <div class="wrapper-demo">
@@ -302,7 +302,7 @@ function spitFirstItems(year){
       return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Total Tickets Sold: " + d3.format(",")(d.TicketsSold) + "</div><div class='rank'>Average Tickets Sold: " + d3.format(",")(d.AvgTicketsSold) + "</div><div class='rank'>Gross: $" + d.gross_millions + " million</div>";
     }
     if (d.type == "tickets"){
-      return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Total Tickets Sold: " + d.TicketsSold + "</div><div class='rank'>Average Tickets Sold: " + d3.format(",")(d.AvgTicketsSold) + "</div><div class='rank'>Gross: $" + d.gross_millions + " million</div>"
+      return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Total Tickets Sold: " + d3.format(",")(d.TicketsSold) + "</div><div class='rank'>Average Tickets Sold: " + d3.format(",")(d.AvgTicketsSold) + "</div><div class='rank'>Gross: $" + d.gross_millions + " million</div>"
     }
  });
 }
