--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -15,12 +15,12 @@
        body { font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
        #selector { margin-left:auto; margin-right:auto; text-align:center; }
        .button { padding:10px; display:inline-block; text-align:center; width:100%; background-color:#fff; font-weight:900; font-family:"Benton Sans",Helvetica,Arial,sans-serif; border:1px solid black; }
-       .button:hover, .selected { background-color:#333 !important; color:#fff !important; cursor:pointer;  }
+       .button:hover, .selected { background-color:#7F587C !important; color:#fff !important; cursor:pointer;  }
        .button { float:left; }
        .stat { float:right; }
        .filterBreak { height:2px; border-top:1px solid #ddd; clear:both; }
 
-       .icon { text-align:left; }
+       .icon { text-align:center; }
        .icon img { width:100px; }
        .bigicon { text-align:center; }
        .bigicon img { width:100px; }
@@ -44,16 +44,18 @@
        .item.icon { text-align:left !important; }
 
        .item { border-bottom:1px solid #ddd; }
+
         
        #wrapper { width:100%; } 
        .leftSide { float:left; width:30%; position:fixed; }
-       .rightSide { float:right; width:67%; height:750px; overflow-x:hidden; overflow-y:auto; }
+       .rightSide { float:right; width:67%; height:800px; overflow-x:hidden; overflow-y:auto; }
 
-       .title { font-weight:900; font-size:1em !important; font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
+       .title { font-weight:900; font-size:1em !important; font-family:"Benton Sans",Helvetica,Arial,sans-serif; text-align:center; }
+       .art { text-align:center; }
        .description { font-family:"Benton Sans",Helvetica,Arial,sans-serif; font-size:1em !important; }
 
         #filter { font-family:"Benton Sans"; font-size:.9em; margin:5px; }
-        #filter input { width: 100% !important; padding: 0 10px 0 10px; font-family:"Benton Sans"; border-radius:5px !important; margin:0; width:100%; height:30px; line-height:120%; font-size: 1em; -webkit-appearance: none;
+        #filter input { width: 100% !important; padding: 0 10px 0 10px; font-family:"Benton Sans"; border-radius:0 !important; margin:0; width:100%; height:30px; line-height:120%; font-size: 1em; -webkit-appearance: none;
           -webkit-border-radius:0; border-radius:0; box-shadow: inset 0 1px 2px rgba(0,0,0,0.1); color: rgba(0,0,0,0.75);  -webkit-transition: all 0.30s ease-in-out; -moz-transition: all 0.30s ease-in-out; -ms-transition: all 0.30s ease-in-out; -o-transition: all 0.30s ease-in-out; background-color: #fff !important; font-family: inherit; border: 1px solid #eee !important; 
           background-size: 14px 14px;
           background-repeat: no-repeat; 
@@ -143,7 +145,7 @@
   <div class="filterBreak"></div>
 
 <div id="filterBox">
-   <div class="switch button" data="all">All</div>
+   <div class="switch button selected" data="all">All</div>
    <div class="stat"></div>
    <div class="filterBreak"></div>
 
@@ -163,13 +165,15 @@
    <div class="stat"></div>
    <div class="filterBreak"></div>
 
-   <div class="switch button" data="tickets">Ticket Sales</div>
+   <div class="switch button" data="tickets">Ticket Sales ($166m+)</div>
    <div class="stat"></div>
    <div class="filterBreak"></div>
 
    <div class="switch button" data="other">Other Events</div>
    <div class="stat"></div>
 </div>
+
+<div class="filterBreak"></div>
 
 <div id="filter"><input type="search" id="filter_box" placeholder="Search by keyword"></input></div>
 
@@ -268,14 +272,16 @@ $("li.switch").click(function() {
         $('.item, .year').hide();
         $(".switch, .button").removeClass("selected");
         var txt = $('#filter_box').val();
-        $('.item, .year').each(function(){
+        $('.item, .year, .title').each(function(){
            if($(this).text().toUpperCase().indexOf(txt.toUpperCase()) != -1){
                $(this).show();
                $(this).parent().show();
+               $(this).parent().parent().show();
            }
         });
         var count = $('.item:visible').length;
-        $('#results').html(count);
+        // $('.results').show();
+        // $('.results').html(count);
     });
 });
 
@@ -299,7 +305,7 @@ function spitFirstItems(year){
       return  "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Grammy Award</div>" ;
     }
     if (d.type == "tour"){
-      return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Total Tickets Sold: " + d3.format(",")(d.TicketsSold) + "</div><div class='rank'>Average Tickets Sold: " + d3.format(",")(d.AvgTicketsSold) + "</div><div class='rank'>Gross: $" + d.gross_millions + " million</div>";
+      return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div>";
     }
     if (d.type == "tickets"){
       return "<div class='icon'><img src='img/" + d.art + "' /></div><div class='title'>" + d.title + "</div><div class='rank'>Total Tickets Sold: " + d3.format(",")(d.TicketsSold) + "</div><div class='rank'>Average Tickets Sold: " + d3.format(",")(d.AvgTicketsSold) + "</div><div class='rank'>Gross: $" + d.gross_millions + " million</div>"
