--- a/20160501-prince_stats/family.html
+++ b/20160501-prince_stats/family.html
@@ -13,16 +13,44 @@
   
   <style>
        body { font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
-   
+        .button { padding:10px; display:inline-block; text-align:center; width:100%; background-color:#fff; font-weight:900; font-family:"Benton Sans",Helvetica,Arial,sans-serif; border:1px solid black; }
+       .button:hover, .selected { background-color:#7F587C !important; color:#fff !important; cursor:pointer;  }
+       .button { float:left; }
+
+       #filterBox { float:right; position:fixed; width:300px; }
+       #resultsBox { float:right; width:70%; }
+
+       .profile { border-bottom:1px solid #ddd; }
+       .name { font-weight:900; font-size:1.5em; }
+       .chatter { padding:20px; }
+
+        #filter { font-family:"Benton Sans"; font-size:.9em; margin:5px; }
+        #filter input { width: 100% !important; padding: 0 10px 0 10px; font-family:"Benton Sans"; border-radius:0 !important; margin:0; width:100%; height:30px; line-height:120%; font-size: 1em; -webkit-appearance: none;
+          -webkit-border-radius:0; border-radius:0; box-shadow: inset 0 1px 2px rgba(0,0,0,0.1); color: rgba(0,0,0,0.75);  -webkit-transition: all 0.30s ease-in-out; -moz-transition: all 0.30s ease-in-out; -ms-transition: all 0.30s ease-in-out; -o-transition: all 0.30s ease-in-out; background-color: #fff !important; font-family: inherit; border: 1px solid #eee !important; 
+          background-size: 14px 14px;
+          background-repeat: no-repeat; 
+          background-position: 98% 50%; }
+        #filter input:focus { width: 100% !important; font-family:"Benton Sans"; box-shadow: 0 0 5px #999; padding: 1px 10px 1px 10px; border: 1px solid #61bd1a; }
+
 
       @media (max-width:500px) {
-
+       #filterBox { float:none; position:static; width:100%; }
+       #resultsBox { float:none; width:100%; }
        }
   </style> 
 </head>
 
 <body>
 <div id="wrapper">
+
+<div id="filterBox">
+   <div id="filter"><input type="search" id="filter_box" placeholder="Search by keyword"></input></div>
+   
+</div>
+
+<div id="resultsBox">
+
+</div>
 
 </div>
 </body>
@@ -42,6 +70,57 @@
 d3.json("http://googlescript.startribune.com/?macro=AKfycbwG7mX6qPZaIhkwY2AJ2lU7kNarbm6OWIkWVfnmYZGYruIl40cu&id=16gGTey1QC4Rui7SHF6nBgyrfhLAlzJoVLSkv6vCVvbI&sheet=family_members", function(error, dataLoad) {
 
 var data = dataLoad.family_members;
+
+
+
+function buildButtons(){
+
+ d3.select("#filterBox").selectAll(".button")
+  .data(data).enter().append("div")
+  .attr("class","button")
+  .attr("data",function(d){ return d.id; })
+  .html(function(d){ return d.name; });
+
+  $("#filterBox").append('<div class="button selected" data="all">All</div>');
+
+  $(".button").click(function() {
+  $(".button").removeClass("selected");
+  $(this).addClass("selected");
+  $(".profile").hide();
+  if ($(this).attr("data") == "all") { $(".profile").show(); }
+  else { $("." + $(this).attr("data")).show(); }
+});
+}
+
+function buildProfiles(){
+ d3.select("#resultsBox").selectAll(".profile")
+  .data(data).enter().append("div")
+  .attr("class",function(d) { return "profile " + d.id; })
+  .html(function(d){ 
+      return "<div class='photo'><img src='" + d.photo + "' /></div><div class='name'>" + d.name + "</div><div class='stat dob'>DOB: " + d.dob + "</div><div class='stat age'>Age: " + d.age + "</div><div class='stat occupation'>Occupation: " + d.occupation + "</div><div class='stat relation'>Relation to deceased: " + d.relation + "</div><div class='stat gender'>Gender: " + d.gender + "</div><div class='chatter'>Notes: " + d.notes + "</div><div class='connections'>Connections: " + d.connections + "</div>"
+ });
+
+    $( document ).ready(function() {
+
+     $('#filter_box').keyup(function(i){
+        $('.profile').hide();
+        $(".button").removeClass("selected");
+        var txt = String($('#filter_box').val());
+        $('.profile').each(function(){
+           if($(this).text().toUpperCase().indexOf(txt.toUpperCase()) != -1){
+               $(this).show();
+           }
+        });
+        var count = $('.item:visible').length;
+        // $('.results').show();
+        // $('.results').html(count);
+    });
+});
+}
+
+buildButtons();
+buildProfiles();
+
 
 
 });
