--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -78,16 +78,12 @@
         .video-container object,
         .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
-        
           #filter { text-align:center; margin:0; clear:both; display:block; padding:0; padding-top:15px; width:100%; }
           #filterBox { display:none; }
           #selector { display:block; }
           .button, .stat { width:100%; float:none; clear:both; }
           .leftSide, .rightSide { width:100%; float:none; position:static; }
-
-
-          body{max-width:525px;}
-        
+        body{max-width:525px;}
   </style> 
 </head>
 
@@ -109,6 +105,47 @@
               <li class="switch button" data="billboard"><a href="#">Billboard Rankings (40)</a></li>
               <li class="switch button" data="tickets"><a href="#">Ticket Sales ($166m+)</a></li>
               <li class="switch button" data="other"><a href="#">Other Events</a></li>
+<!--         <li class="switch left"><a href="#" data="1958">1958</a></li>
+        <li class="switch left"><a href="#" data="1975">1975</a></li>
+        <li class="switch left"><a href="#" data="1978">1978</a></li>
+        <li class="switch left"><a href="#" data="1979">1979</a></li>
+        <li class="switch left"><a href="#" data="1980">1980</a></li>
+        <li class="switch left"><a href="#" data="1981">1981</a></li>
+        <li class="switch left"><a href="#" data="1982">1982</a></li>
+        <li class="switch left"><a href="#" data="1983">1983</a></li>
+        <li class="switch left"><a href="#" data="1984">1984</a></li>
+        <li class="switch left"><a href="#" data="1985">1985</a></li>
+        <li class="switch left"><a href="#" data="1986">1986</a></li>
+        <li class="switch left"><a href="#" data="1987">1987</a></li>
+        <li class="switch left"><a href="#" data="1988">1988</a></li>
+        <li class="switch left"><a href="#" data="1989">1989</a></li>
+        <li class="switch left"><a href="#" data="1990">1990</a></li>
+        <li class="switch left"><a href="#" data="1991">1991</a></li>
+        <li class="switch left"><a href="#" data="1992">1992</a></li>
+        <li class="switch right"><a href="#" data="1993">1993</a></li>
+        <li class="switch right"><a href="#" data="1994">1994</a></li>
+        <li class="switch right"><a href="#" data="1995">1995</a></li>
+        <li class="switch right"><a href="#" data="1996">1996</a></li>
+        <li class="switch right"><a href="#" data="1997">1997</a></li>
+        <li class="switch right"><a href="#" data="1998">1998</a></li>
+        <li class="switch right"><a href="#" data="1999">1999</a></li>
+        <li class="switch right"><a href="#" data="2000">2000</a></li>
+        <li class="switch right"><a href="#" data="2001">2001</a></li>
+        <li class="switch right"><a href="#" data="2002">2002</a></li>
+        <li class="switch right"><a href="#" data="2003">2003</a></li>
+        <li class="switch right"><a href="#" data="2004">2004</a></li>
+        <li class="switch right"><a href="#" data="2005">2005</a></li>
+        <li class="switch right"><a href="#" data="2006">2006</a></li>
+        <li class="switch right"><a href="#" data="2007">2007</a></li>
+        <li class="switch right"><a href="#" data="2008">2008</a></li>
+        <li class="switch right"><a href="#" data="2009">2009</a></li>
+        <li class="switch right"><a href="#" data="2010">2010</a></li>
+        <li class="switch right"><a href="#" data="2011">2011</a></li>
+        <li class="switch right"><a href="#" data="2012">2012</a></li>
+        <li class="switch right"><a href="#" data="2013">2013</a></li>
+        <li class="switch right"><a href="#" data="2014">2014</a></li>
+        <li class="switch right"><a href="#" data="2015">2015</a></li>
+        <li class="switch right"><a href="#" data="2016">2016</a></li> -->
           </ul>
           </div>
         ​</div>
