swap icons, path to data viz styles

--- a/20160501-prince_stats/index.html
+++ b/20160501-prince_stats/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Frey Hargarten - StarTribune">
 
   <link rel="stylesheet" href="http://assets.startribune.com/static/css/screen.css?d=8eac39b99728296a5d387eebc0f53ade09e9e0e6">
-  <link rel="stylesheet" href="../_common_resources/styles/startribune_dataviz_styles.css" />
+  <link rel="stylesheet" href="http://striblab.github.io/startribune_dataviz/_common_resources/styles/startribune_dataviz_styles.css" />
   
   <style>
        body { font-family:"Benton Sans",Helvetica,Arial,sans-serif; }
